fix: add font weight to left alignment in found-words-list for improved readability

--- a/src/sass/general.scss
+++ b/src/sass/general.scss
@@ -1231,6 +1231,7 @@ ol.found-words-list {
 
 		&.left {
 			width: 22%;
+			font-weight: 600;
 		}
 
 		&.right {
